# integration-hub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  scheduler.py  security.py
app/db/: database.py
app/models/: __init__.py  exchangeData.py  models.py  newsArticle.py  trackingData.py  user.py  weatherData.py
app/schemas/: schemas.py  users.py
app/services/: amazon_tracking_service.py  exchange_service.py  news_service.py  system_service.py  user_service.py  weather_service.py
static/css/: dashboard.css  login_reg.css
static/js/: auth.js  dashboard.js  login.js  register.js
templates/: dashboard.html  index.html  login.html  register.html
tests/: conftest.py  test_amazon_service.py  test_routes.py  test_security.py  test_services.py  test_system_service.py  test_user_service.py
